--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,5 @@
-# Dockerfile (simple Node example)
-FROM node:18-alpine AS build
-WORKDIR /app
-COPY package*.json ./
-RUN npm install --silent
-COPY . .
-RUN npm run build || true
-
-FROM node:18-alpine
-WORKDIR /app
-COPY --from=build /app . 
-EXPOSE 3000
-CMD ["node", "server.js"]
-
+# Simple static site using nginx
+FROM nginx:stable-alpine
+COPY index.html /usr/share/nginx/html/index.html
+# expose port 80 (informational)
+EXPOSE 80
